--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 </head>
 
 <body>
-  <h2>Hello World! :-)</h2>
+  <h2>Hello World! :-) 
+  <br>
+    Built with the help of... https://www.taniarascia.com/how-to-connect-to-an-api-with-javascript/
+  </h2>
     
   <div id="root"></div>
 
